# diy-http

./: CMakeLists.txt  httpd.c  httpd.h  main.c
htdocs/: index.html
